@@ -134,11 +134,13 @@ public class Pipeline extends com.fluendo.jst.Element implements BusSyncHandler
     }
     if (busThread != null) {
       busThread.shutDown();
+      /* Don't join, it's too dangerous for now. 
       try {
         busThread.join();
       }
       catch (InterruptedException ie) {
       }
+      */
       busThread = null;
     }
   }
